force-app/main/default/objects/Loan__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checkbox indicating if the loan is still active</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>