force-app/main/default/objects/Loan__c/fields/Date_Loaned__c.field-meta.xml
<CustomField>
    <fullName>Date_Loaned__c</fullName>
    <defaultValue>today()</defaultValue>
    <description>Date for when the book was loaned out</description>
    <label>Date Loaned</label>
    <type>Date</type>
</CustomField>