force-app/main/default/objects/Loan__c/fields/Date_Returned__c.field-meta.xml
<CustomField>
    <fullName>Date_Returned__c</fullName>
    <description>Date the book was returned</description>
    <label>Date Returned</label>
    <type>Date</type>
</CustomField>